[tool.poetry]
name = "forfeitbot"
version = "0.1.0"
description = "A simple bot written in Python"
authors = ["Max Thomas <undeadmax1313@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
praw = "^7.1.0"
env = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
